--- a/index.css
+++ b/index.css
@@ -95,3 +95,52 @@ button[type="submit"]:hover {
 .additional-info {
   margin-top: 10px;
 }
+/* MEDIUM AND SMALL SCREEN */
+/* ==================================================================== */
+@media (min-width: 320px) and (max-width: 768px) {
+  body {
+    background-color: #0b435b;
+  }
+
+  /* header/search button */
+  header {
+    padding: 20px;
+  }
+
+  h1 {
+    color: #1f0a0a;
+    text-decoration-line: underline;
+  }
+
+  #search-form {
+    margin-top: 20px;
+    padding-bottom: 40px;
+  }
+
+  #search-input {
+    width: 300px;
+    padding: 10px;
+    border: 2px solid #7e1d22;
+    border-radius: 10px;
+    font-size: 16px;
+    margin-bottom: 20px;
+  }
+
+  #search-input:focus {
+    border: 2px solid #252d2c;
+    border-radius: 10px;
+  }
+
+  button[type="submit"] {
+    padding: 10px 20px;
+    background-color: #8d99ae;
+    color: #dedfeb;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+  button[type="submit"]:hover {
+    background-color: #9eb1ae;
+  }
+}
