--- a/index.css
+++ b/index.css
@@ -52,7 +52,6 @@ button[type="submit"]:hover {
   flex-wrap: wrap;
 }
 
-/* movies container */
 .movie-container {
   padding: 30px;
   margin-top: 20px;
@@ -95,6 +94,9 @@ button[type="submit"]:hover {
 .additional-info {
   margin-top: 10px;
 }
+
+/* ******************************************************************* */
+
 /* MEDIUM AND SMALL SCREEN */
 /* ==================================================================== */
 @media (min-width: 320px) and (max-width: 768px) {
@@ -143,50 +145,51 @@ button[type="submit"]:hover {
   button[type="submit"]:hover {
     background-color: #9eb1ae;
   }
-}
-/* movies container */
-.movie-container {
-  padding: 20px;
-  margin-top: 20px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
 
-.movie-item {
-  width: 100%;
-  margin-bottom: 40px;
-  padding: 20px;
-  border: 2px solid #e0ca23;
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px 10px #8d7d01;
-}
+  /* movies container */
+  .movie-container {
+    padding: 20px;
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
 
-.movie-item img {
-  width: 100%;
-  height: auto;
-  border-radius: 15px;
-}
+  .movie-item {
+    width: 100%;
+    margin-bottom: 40px;
+    padding: 20px;
+    border: 2px solid #e0ca23;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px 10px #8d7d01;
+  }
 
-.movie-item h2 {
-  font-size: 20px;
-  margin: 10px 0;
-}
+  .movie-item img {
+    width: 100%;
+    height: auto;
+    border-radius: 15px;
+  }
 
-.movie-item p {
-  margin: 2px 0;
-}
+  .movie-item h2 {
+    font-size: 20px;
+    margin: 10px 0;
+  }
 
-.read-more-button {
-  background-color: #68a59d;
-  border: none;
-  border-radius: 5px;
-  border: 3px solid#1f0a0a;
-  color: hsl(358, 22%, 78%);
-  cursor: pointer;
-  margin-top: 5px;
-}
+  .movie-item p {
+    margin: 2px 0;
+  }
 
-.additional-info {
-  margin-top: 10px;
+  .read-more-button {
+    background-color: #68a59d;
+    border: none;
+    border-radius: 5px;
+    border: 3px solid#1f0a0a;
+    color: hsl(358, 22%, 78%);
+    cursor: pointer;
+    margin-top: 5px;
+  }
+
+  .additional-info {
+    margin-top: 10px;
+  }
 }
