--- a/index.css
+++ b/index.css
@@ -12,7 +12,6 @@ body {
   padding-right: 25px;
 }
 
-
 /* header/search button */
 header {
   padding: 20px;
@@ -48,14 +47,6 @@ button[type="submit"] {
   cursor: pointer;
 }
 
-#clear-icon {
-  background-color: #d90429;
-  margin-top: 20px;
-  /* padding: 10px ; */
-  cursor: pointer;
-  border: 2px solid;
-  border-radius: 5px;
-}
 
 button[type="submit"]:hover {
   background-color: #edf2f4;
@@ -134,7 +125,7 @@ button[type="submit"]:hover {
 /* ==================================================================== */
 @media (min-width: 320px) and (max-width: 768px) {
   body {
-    background-color: #0b435b;
+    background-color: #2b2d42;
   }
 
   /* header/search button */
@@ -143,7 +134,7 @@ button[type="submit"]:hover {
   }
 
   h1 {
-    color: #1f0a0a;
+    color: #d90429;
     text-decoration-line: underline;
   }
 
@@ -192,9 +183,9 @@ button[type="submit"]:hover {
     width: 100%;
     margin-bottom: 40px;
     padding: 20px;
-    border: 2px solid #e0ca23;
+    border: 2px solid #edf2f4;
     border-radius: 10px;
-    box-shadow: 0px 0px 10px 10px #8d7d01;
+    box-shadow: 0px 0px 10px 10px #8d99ae;
   }
 
   .movie-item img {
@@ -212,11 +203,11 @@ button[type="submit"]:hover {
     margin: 2px 0;
   }
   .read-more-button {
-    background-color: #68a59d;
+    background-color: #f2e9e4;
     border: none;
     border-radius: 5px;
     border: 3px solid#1f0a0a;
-    color: hsl(358, 22%, 78%);
+    color: #000814;
     cursor: pointer;
     margin-top: 5px;
   }
@@ -226,19 +217,18 @@ button[type="submit"]:hover {
   }
 
   /* added for x for clear */
-.input-container {
-  position: relative;
-  display: inline-block;
-}
+  .input-container {
+    position: relative;
+    display: inline-block;
+  }
 
-.clear-icon {
-  position: absolute;
-  top: 40%;
-  right: 10px;
-  transform: translateY(-50%);
-  cursor: pointer;
-  color: #808080;
-  text-transform: lowercase;
-}
-
+  .clear-icon {
+    position: absolute;
+    top: 40%;
+    right: 10px;
+    transform: translateY(-50%);
+    cursor: pointer;
+    color: #922323;
+    text-transform: lowercase;
+  }
 }
